5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1764_672.log
== TEST (2019-05-21 17:24:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n=ones(N,dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:24:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= ones(N, dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:21:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= ones(N, dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:21:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n= ones(n, dtype=int)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:29:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array([N])
v1 = ones(N,dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:30:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
n = array([1])
v1 = ones(1,dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:30:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = ones(1,dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:32:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
v1 = ones([N,dtype=int])

print(v1)

-- ERROR:
File "XXXX", line 3
    v1 = ones([N,dtype=int])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:33:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(N, dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:33:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(N, dtype=int)

print(v1)

-- EXECUTION TIME:
0.478754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/672/main.py", line 3, in <module>
    v1 = ones(N, dtype=int)
NameError: name 'N' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:33:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(N, dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:33:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(N, dtype=int)

print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:40:36) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:40:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

vetor = ones(N , dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:41:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

vetor = ones("N", dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:42:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

vetor = ones(6, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:42:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

vetor = ones(6, dtype=int)

print(vetor)

-- EXECUTION TIME:
0.583416
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:44:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N=array(eval(input("N: ")))

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:45:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N=array(eval(input("N: ")))

vetor = ones(N, dtype=int)

print(vetor)

-- EXECUTION TIME:
0.374101
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
